Add GAL action sequences and typed projectile spawning